--- a/counter-style.html
+++ b/counter-style.html
@@ -8,19 +8,18 @@
 <style type="text/css">
 ol {float: left; margin-right: 2em; background: #EEE;}
 ol::before {content: "[." attr(class) "]";
-	font-style: italic; margin-bottom: 0.5em; display: block;}
+	font-family: monospace; margin-bottom: 0.5em; display: block;}
 @supports (display: flex) {
 	body {display: flex; flex-wrap: wrap; align-items: flex-start;}
-	ol {float: none; padding: 0.25em 0.25em 0.25em 2.5em;}
+	ol {float: none; padding: 0.25em 0.25em 0.25em 2.5em; margin-left: 2em;}
 }
-.thisisfine {display: none; background: transparent;}
-.list08:hover ~ .thisisfine {display: block;}
+.thisisfine {background: transparent; margin-left: 2em;}
 </style>
 <style type="text/css" id="tests">
 @counter-style triangle {
 	system: cyclic;
 	symbols: ▶ ▷;
-	suffix: " • ";
+	suffix: " ≈ ";
 }
 @counter-style phases {
 	/* inspired by https://twitter.com/elbym/status/823986388060274689 */
@@ -40,7 +39,7 @@ ol::before {content: "[." attr(class) "]";
 @counter-style trinary {
 	system: numeric;
 	symbols: '0' '1' '2';
-	pad: 5 "0";
+	pad: 4 "0";
 }
 @counter-style footnote {
 	system: symbolic;
@@ -54,6 +53,18 @@ ol::before {content: "[." attr(class) "]";
 	additive-symbols: 1000 M, 900 CM, 500 D, 400 CD,
 		100 C, 90 XC, 50 L, 40 XL,
 		10 X, 9 IX, 5 V, 4 IV, 1 I;
+}
+
+@counter-style problem {
+    system: additive;
+    additive-symbols: 3 "Y", 2 "X";
+    fallback: decimal;
+}
+
+
+@counter-style newdecimal {
+	system: extends decimal;
+	suffix: ") ";
 }
 @counter-style thisisfine {
     system: cyclic;
@@ -72,6 +83,8 @@ ol::before {content: "[." attr(class) "]";
 .list08 {list-style-type: roman;}
 .list08 li[value] {margin-top: 0.5em;}
 .list08 li[value]::after {content: " (enforced via value=\"" attr(value) "\")"; font-size: smaller;}
+.list09 {list-style-type: problem;}
+.list10 {list-style-type: newdecimal;}
 .thisisfine {list-style-type: thisisfine;}
 </style>
 </head>
@@ -222,6 +235,34 @@ ol::before {content: "[." attr(class) "]";
 <li>103</li>
 <li>104</li>
 <li>105</li>
+</ol>
+
+<ol class="list09">
+<li>one</li>
+<li>two</li>
+<li>three</li>
+<li>four</li>
+<li>five</li>
+<li>six</li>
+<li>seven</li>
+<li>eight</li>
+<li>nine</li>
+<li>ten</li>
+<li>eleven</li>
+</ol>
+
+<ol class="list10">
+<li>one</li>
+<li>two</li>
+<li>three</li>
+<li>four</li>
+<li>five</li>
+<li>six</li>
+<li>seven</li>
+<li>eight</li>
+<li>nine</li>
+<li>ten</li>
+<li>eleven</li>
 </ol>
 
 
