Improved testing of media queries and @page

--- a/css3/at-page.html
+++ b/css3/at-page.html
@@ -5,23 +5,25 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="c/base.css" type="text/css">
 <style type="text/css" id="tests">
-@page :first {font-weight: bold;}
-@page :left {border-right: 0.5em solid; font-family: sans-serif;}
-@page :right {border-left: 0.5em solid; font-family: monospace;}
 @page {
-	padding: 10%;
+	size: landscape;
+	margin: 5in;
 	counter-increment: page;
 	@top-center {
 		content: "@page selector test"; color: gray;}
 	@bottom-center {
 		content: "Page " counter(page); font-style: italic;}
 }
-@page small {
-	size: 6in 9in; background: silver;
+@page rotated {
+	size: portrait;
 }
+.arena .reduced {page: rotated;}
+
+@page :first {font-weight: bold;}
+@page :left {border-right: 0.5em solid; font-family: sans-serif;}
+@page :right {border-left: 0.5em solid; font-family: monospace;}
 
 .arena p:nth-child(2n) {page-break-after: always;}
-.arena .reduced {page: small;}
 </style>
 </head>
 <body id="www-meyerweb-com" class="css test suite">
@@ -48,7 +50,7 @@
 
 <p>Lobortis orange paul newman parum bentleyville qui ullamcorper facilisi tincidunt euismod legentis lebron james garfield heights aliquip legentis euclid beach quam, qui westlake adipiscing ex brooklyn wisi anteposuerit browns nonummy great lakes science center maple heights. Sollemnes claritatem metroparks zoo seacula dolore highland heights, ea, non formas, michael symon, est ut jim tressel harvey pekar magna don shula. Volutpat roger zelazny lectores pierogies consectetuer, jesse owens iusto margaret hamilton, duis insitam in nisl. Lectorum wes craven eodem cleveland heights parum videntur habent erat videntur paul brown erat accumsan qui quam. Legere john w. heisman possim north royalton minim jim lovell eleifend consequat feugiat burgess meredith facilisis vulputate facer ut, et, sollemnes lius berea eum halle berry. Arsenio hall shaker heights solon major everett eorum north olmsted blandit lius hendrerit, eleifend at claritatem consectetuer bowling, humanitatis possim vel lakewood, amet quarta feugait suscipit processus illum jacobs field peter b. lewis iusto velit. Doug dieken autem dolor typi per tracy chapman the metroparks east side nihil east cleveland diam hunting valley squire’s castle elit, commodo dolore jim brown the arcade eric carmen facer michael ruhlman et facit quarta. Glenwillow screamin’ jay hawkins quod ii clari chagrin falls township claritatem decima in langston hughes mayfield village amet, bob golic olmsted falls consequat ad. Laoreet patricia heaton quinta pepper pike valley view formas amet tempor id est me ohio city nunc george steinbrenner. Woodmere enim tremont qui exerci saepius dignissim est fiant mentor headlands phil donahue nam. Exerci quod ipsum west side sandy alomar placerat dennis kucinich seacula congue usus richmond heights modo vel putamus uss cod typi eros fiant rocky river imperdiet demonstraverunt michael stanley nunc et ruby dee consequat esse duis habent soluta. Seven hills ipsum indians superhost nobis carl b. stokes nobis minim mayfield heights euismod frank yankovic newburgh heights bedford heights option clay mathews diam.</p>
 
-<div class="reduced">
+<div class="rotated">
 
 <p>Omar vizquel joe shuster luptatum in ii james a. garfield praesent in don king et ut claram ozzie newsome qui, middleburg heights doming dolore praesent jerry siegel the innerbelt. Independence harlan ellison anteposuerit william g. mather nostrud iis brecksville nobis ghoulardi bratenahl futurum henry mancini severance hall duis lebron departum arena depressum metro quatro annum returnum celebra gigantus lew wasserman demonstraverunt nobis qui sit iis dolor urban meyer congue. Littera in sequitur est assum lake erie modo south euclid tim conway nonummy. Sit quis clari te nulla quam, chagrin falls commodo ut, aliquip investigationes est. Non eum rock &amp; roll hall of fame drew carey dignissim the gold coast tation gund arena geauga lake dolore warrensville heights soluta sit dynamicus, lorem quod parma liber, processus quinta dorothy dandridge augue, andre norton eros sed moreland hills in wisi decima feugait. Per saepius eorum mirum claritatem autem mutationem zzril cum emerald necklace te futurum hal holbrook lyndhurst. Qui accumsan notare litterarum insitam strongsville ad, eum seacula ruby dee, facilisi consuetudium debra winger futurum gates mills at humanitatis sammy kaye brecksville tation anne heche futurum. Pepper pike cuyahoga heights anteposuerit placerat accumsan bentleyville bedford mazim feugait euismod est quis doug dieken dolor. Facer lorem jim brown university heights mutationem north randall nonummy investigationes option, non, veniam feugiat facilisis legentis ii west side solon sit vel saepius olmsted falls mark price lorem congue claram uss cod delenit bedford heights. Autem ohio city eu nobis sed, littera etiam odio nisl quod north olmsted michael stanley volutpat claritatem. Velit et collision bend et qui walton hills eros sollemnes eu fiant. The gold coast qui the innerbelt tation qui et feugiat dolore qui municipal stadium lobortis in blandit ut. Sit nulla ut great lakes science center eodem major everett dolor notare eric metcalf exerci east cleveland mazim odio vulputate lectorum, possim augue the arcade wisi litterarum browns iis typi est assum decima. South euclid imperdiet superhost brooklyn heights severance hall facer orange te decima, bobby knight formas, vero lorem nam ii nunc tincidunt est indians chrissie hynde, polka hall of fame putamus nunc te habent children’s museum seven hills notare kenny lofton lebron james. Consectetuer claritatem illum middleburg heights tempor michael ruhlman legentis lius nulla me james a. garfield sollemnes ad olmsted township steve harvey, ullamcorper, facit legunt dead man’s curve berea cuyahoga river john d. rockefeller est accumsan sequitur tracy chapman decima option.</p>
 
