--- a/css3/filter.html
+++ b/css3/filter.html
@@ -21,6 +21,8 @@ li[class^="li"] img {height: 250px; width: 250px; vertical-align: text-top;}
 .li09 > img {filter: blur(5px);}
 .li10 > img {filter: drop-shadow(5px 3px 10px rgba(255,0,0,0.5));}
 .li11 > img {filter: url(c/filter.svg#Turb0);}
+.li12 > img {filter: url(c/filter.svg#edgedetect);}
+.li13 > img {filter: url(c/filter.svg#emboss) blur(0.23px) contrast(1.5);}
 </style>
 </head>
 <body id="www-meyerweb-com" class="css test suite">
@@ -41,6 +43,8 @@ li[class^="li"] img {height: 250px; width: 250px; vertical-align: text-top;}
 <li class="li09"><img src="i/Compass_Card.png"></li>
 <li class="li10"><img src="i/Compass_Card.png"></li>
 <li class="li11"><img src="i/Compass_Card.png"></li>
+<li class="li12"><img src="i/Compass_Card.png"></li>
+<li class="li13"><img src="i/Compass_Card.png"></li>
 </ol>
 
 </div>
