Updated shorthand 'mask' test

--- a/css3/mask.html
+++ b/css3/mask.html
@@ -12,7 +12,8 @@
 .t02 img {mask: url(i/border-circles.png), url(i/hexlike.svg);}
 .t03 img {mask: url(i/border-circles.png) no-repeat bottom right, url(i/hexlike.svg) no-repeat top left;}
 .t04 img {mask: url(i/border-circles.png) intersect, url(i/hexlike.svg);}
-.t05 img {mask: url(i/border-circles.png) luminance exclude, url(i/hexlike.svg) alpha repeat-y;}
+.t05 img {mask: url(i/border-circles.png), url(i/hexlike.svg) intersect;}
+.t06 img {mask: url(i/border-circles.png) luminance exclude, url(i/hexlike.svg) alpha repeat-y;}
 </style>
 </head>
 <body id="www-meyerweb-com" class="css test suite">
@@ -26,6 +27,7 @@
 <li class="t03"><img src="i/Compass_Card.png"></li>
 <li class="t04"><img src="i/Compass_Card.png"></li>
 <li class="t05"><img src="i/Compass_Card.png"></li>
+<li class="t06"><img src="i/Compass_Card.png"></li>
 </ol>
 
 </div>
