--- a/css3/mask-position.html
+++ b/css3/mask-position.html
@@ -5,8 +5,13 @@
 <!-- mask-image mask-repeat -->
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" href="c/base.css" type="text/css">
+<link rel="stylesheet" href="c/show-class-id.css" type="text/css">
+<style type="text/css">
+.arena li[class] {position: relative;}
+.arena li[class]::before {position: absolute; top: -1.33em;}
+</style>
 <style type="text/css" id="tests">
-.arena li[class] {float: left; margin: 2.5%; background: gray; list-style-position: inside;}
+.arena li[class] {float: left; margin: 2.5%; background: gray;}
 .arena li[class] img {height: 200px; width: 200px; padding: 0.5em; margin: 0.5em; background: silver;
 	vertical-align: text-top; mask-repeat: no-repeat;}
 .png img {mask-image: url(i/border-circles.png);}
