--- a/-base.html
+++ b/-base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>CSS test</title>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta charset="utf-8" />
 <link rel="stylesheet" type="text/css" href="c/style-insert-tests.css">
 <style type="text/css" media="all" id="tests">
 
@@ -10,6 +10,9 @@
 </head>
 <body>
 
+<div class="arena">
+
+</div>
 
 </body>
 </html>
