Updates to hinted-gradient test

--- a/gradient-hints.html
+++ b/gradient-hints.html
@@ -14,17 +14,17 @@ li div::before {content: attr(class);}
 li .base, li .five {margin-top: 0.5em;}
 #l1 {width: 10em;}
 #l1 .base {background: linear-gradient(to right, black, transparent 10em);}
-#l1 .one {background: linear-gradient(to right, black, 4em, transparent 10em);}
-#l1 .two {background: linear-gradient(to right, black, 1em, gray 3em, 4em, transparent 10em);}
-#l1 .three {background: linear-gradient(to right, black, 8em, transparent 10em);}
+#l1 .one {background: linear-gradient(to right, black, 3em, transparent 10em);}
+#l1 .two {background: linear-gradient(to right, black, 1em, transparent 10em);}
+#l1 .three {background: linear-gradient(to right, black, 7em, transparent 10em);}
 #l1 .four {background: linear-gradient(to right, black, 9.95em, transparent 10em);}
 #l1 .five {background: linear-gradient(to right, black 1em, 1em, transparent 2em, 2em, black 3em, 3em, transparent 4em, 4em, black);}
 
 #l2 {width: 20em;}
 #l2 .base {background: radial-gradient(circle at center, black, transparent 10em);}
-#l2 .one {background: radial-gradient(circle at center, black, 4em, transparent 10em);}
-#l2 .two {background: radial-gradient(circle at center, black, 1em, gray 3em, 4em, transparent 10em);}
-#l2 .three {background: radial-gradient(circle at center, black, 8em, transparent 10em);}
+#l2 .one {background: radial-gradient(circle at center, black, 3em, transparent 10em);}
+#l2 .two {background: radial-gradient(circle at center, black, 1em, transparent 10em);}
+#l2 .three {background: radial-gradient(circle at center, black, 7em, transparent 10em);}
 #l2 .four {background: radial-gradient(circle at center, black, 9.95em, transparent 10em);}
 #l2 .five {background: radial-gradient(circle at center, black 1em, 1em, transparent 2em, 2em, black 3em, 3em, transparent 4em, 4em, black);}
 </style>
