--- a/css3/val-colors.html
+++ b/css3/val-colors.html
@@ -20,7 +20,7 @@
 </style>
 </head>
 <body id="www-meyerweb-com" class="css test suite">
-<p id="specref"><a href="http://www.w3.org/TR/css3-values/#calc">http://www.w3.org/TR/css3-values/#calc</a></p>
+<p id="specref"><a href="https://www.w3.org/TR/css3-color/">https://www.w3.org/TR/css3-color/</a></p>
 
 <div class="arena">
 
