--- a/animation-step-direction.html
+++ b/animation-step-direction.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>Figure</title>
+<title>Step animation direction</title>
 <style type="text/css">
 html {background: silver;}
 body {background: white; margin: 1em; padding: 1em;}
