Firefox bug with writing mode, flexbox, and grid

--- a/firefox/writing-mode-flexbox-grid.html
+++ b/firefox/writing-mode-flexbox-grid.html
@@ -33,7 +33,7 @@ header > * {
 <main>
 main
 
-<p>The header (over on the left) should have an <code>h1</code> and an <code>h2</code>.  The <code>h1</code> has been thrown <strong>waaaaay</strong> to the right, such that I can’t reach it via the scrollbar.</p>
+<p>The header (above) should have an <code>h1</code> and an <code>h2</code>.  The <code>h1</code> has been thrown <strong>waaaaay</strong> to the right, such that I can’t reach it via the scrollbar.</p>
 
 <p>Furthermore, if you remove the <code>justify-content</code> from the header element, <em>both</em> heading elements will disappear, as will the horizontal scrollbar.  If it’s set to <code>center</code>, the <code>h1</code> will appear and the <code>h2</code> will disappear.</p>
 
