Changed Firefox bug test filename

--- a/firefox/writing-mode-flexbox.html
+++ b/firefox/writing-mode-flexbox.html
@@ -3,12 +3,9 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Writing mode - flexbox - grid bug</title>
+<title>Writing mode / flexbox bug</title>
 <style type="text/css">
 
-body {
-	display: grid;
-	}
 body > * {
 	border: 1px dotted red;
 	}
