New Grid example showing difference between fit-content and minmax

--- a/grid-fitcontent-minmax.html
+++ b/grid-fitcontent-minmax.html
@@ -21,7 +21,7 @@ p img {height: 100px; width: 500px;}
 <h1>fit-content(50ch)</h1>
 <div class="grid" id="fitcontent">
 <p>Short content, 29 characters.</p>
-<p><img src="ph.png">This is longer content, which reaches a total of 63 characters.</p>
+<p><img src="i/redbox.gif">This is longer content, which reaches a total of 63 characters.</p>
 <p>This is still longer content, going on and on, causing line-wraps and the growth of the row’s height as it makes its way up to 151 characters in total.</p>
 
 </div>
@@ -29,7 +29,7 @@ p img {height: 100px; width: 500px;}
 <h1>minmax(min-content,50ch)</h1>
 <div class="grid" id="minmax">
 <p>Short content, 29 characters.</p>
-<p><img src="ph.png">This is longer content, which reaches a total of 63 characters.</p>
+<p><img src="i/redbox.gif">This is longer content, which reaches a total of 63 characters.</p>
 <p>This is still longer content, going on and on, causing line-wraps and the growth of the row’s height as it makes its way up to 151 characters in total.</p>
 
 </div>
