Added space-evenly test to justify-content

--- a/css3/justify-content.html
+++ b/css3/justify-content.html
@@ -16,6 +16,7 @@
 #l03 {justify-content: center;}
 #l04 {justify-content: space-between;}
 #l05 {justify-content: space-around;}
+#l06 {justify-content: space-evenly;}
 
 input:checked + a + .arena ol, a:focus + .arena ol {flex-direction: column; height: 7em;}
 </style>
@@ -55,6 +56,12 @@ input:checked + a + .arena ol, a:focus + .arena ol {flex-direction: column; heig
 
 <ol id="l05">
 <li>[#l05] List item 1</li>
+<li>List item 2</li>
+<li>List item 3</li>
+</ol>
+
+<ol id="l06">
+<li>[#l06] List item 1</li>
 <li>List item 2</li>
 <li>List item 3</li>
 </ol>
