--- a/attribute-ci.html
+++ b/attribute-ci.html
@@ -4,6 +4,9 @@
 <title>CSS test</title>
 <meta charset="utf-8" />
 <link rel="stylesheet" type="text/css" href="c/style-insert-tests.css">
+<style type="text/css" media="all">
+li[class]::before {content: "[." attr(class) "] ";}
+</style>
 <style type="text/css" media="all" id="tests">
 *[class~="test"] {background: #DDD;}
 *[class~="test" i] {color: green;}
