Added a new tab-size test

--- a/css3/tab-size.html
+++ b/css3/tab-size.html
@@ -12,6 +12,8 @@
 #p04 {tab-size: 10px;}
 #p05 {tab-size: 5px;}
 #p06 {white-space: normal;}
+#p07 {tab-size: 5;}
+#p07 span {display: inline-block; background: yellow; width: 15ch;}
 </style>
 </head>
 <body id="www-meyerweb-com" class="css test suite">
@@ -42,6 +44,11 @@
 </p>
 <p id="p06">
 			[#p06] There are three tabs before this text.
+</p>
+<p id="p07">
+			[#p07] The three tabs before this text should total 15 spaces wide.<br>
+               [#p07] There are 15 spaces before this text.<br>
+<span>span</span>[#p07] The <code>span</code> before this text is <code>15ch</code> wide.
 </p>
 
 </div>
